# qr_bible_sdk

./: .gitignore  README.md
enrich/: Dockerfile  README.md  build.sh  closest_bible_book.py  enrich_text.py  extract_bible_refs.py  lambda_function.py  local-build.sh  local-enrich-api.dockerfile  local-run.pip  local-run.py  local-run.sh  qr24.dockerfile  qr24.pip  qr24.sh
rust/: Cargo.toml
rust/src/: cong.rs  corpora.rs  lib.rs  qr.rs
