[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5.0"
qrcodegen = "1.8.0"
serde = { version="1.0.147", features = ["derive"] }
serde_json = "1.0.81"
# local crates
nexum = { path = "../../../Aleksandr/nexum" }
visibilis = { path = "../../../Aleksandr/visibilis" }
magellan = { path = "../../../Aleksandr/magellan" }